--- a/privacidade.html
+++ b/privacidade.html
@@ -1,1 +1,62 @@
 
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Política de Privacidade - Pedrinhas Mágicas</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #FFF8F1;
+      color: #333;
+      margin: 40px auto;
+      max-width: 800px;
+      line-height: 1.6;
+      padding: 20px;
+      border-radius: 12px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h1 {
+      color: #7A4E1E;
+      text-align: center;
+    }
+    h2 {
+      color: #8C6239;
+      margin-top: 30px;
+    }
+    p {
+      margin-bottom: 16px;
+    }
+    footer {
+      text-align: center;
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+  <h1>Política de Privacidade</h1>
+  
+
+  <p>O aplicativo foi desenvolvido com o objetivo de proporcionar diversão e entretenimento ao usuário.</p>
+
+  <p>Este jogo <strong>não coleta, armazena ou compartilha informações pessoais</strong> dos usuários. Nenhum dado sensível, como nome, e-mail, localização ou informações do dispositivo, é solicitado ou transmitido a terceiros.</p>
+
+  <p>O jogo pode utilizar alguns recursos básicos do dispositivo, como vibração ou som, exclusivamente para fins de jogabilidade e experiência do usuário.</p>
+
+  <p>Não há integração com serviços externos, redes sociais ou anúncios personalizados.</p>
+
+  <h2>Alterações nesta Política</h2>
+  <p>Podemos atualizar esta Política de Privacidade periodicamente. As alterações serão publicadas nesta página com a data de atualização revisada.</p>
+
+  <h2>Contato</h2>
+  <p>Em caso de dúvidas sobre esta política, entre em contato pelo e-mail:<br>
+  <strong>seu-email@exemplo.com</strong></p>
+
+  <footer>
+    Última atualização: 10 de novembro de 2025
+  </footer>
+</body>
+</html>
