--- a/privacidade.html
+++ b/privacidade.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Política de Privacidade - Pedrinhas Mágicas</title>
+  <title>Política de Privacidade </title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -53,7 +53,7 @@
 
   <h2>Contato</h2>
   <p>Em caso de dúvidas sobre esta política, entre em contato pelo e-mail:<br>
-  <strong>seu-email@exemplo.com</strong></p>
+  <strong>t7426541@gmail.com</strong></p>
 
   <footer>
     Última atualização: 10 de novembro de 2025
